# Multi-Cloud-Training-Control-Room

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci-cd.yml
config/: __init__.py  cloud_pricing.yaml  settings.py
examples/: pipeline-config.json
models/: __init__.py  schemas.py
providers/: __init__.py  aws_provider.py  base.py  gcp_provider.py
src/multicloud_ml_pipeline/: __init__.py  cli.py  config.py  exceptions.py  flow.py  models.py  prefect_compat.py  router.py  web.py
src/multicloud_ml_pipeline/providers/: __init__.py  aws.py  azure.py  base.py  factory.py  gcp.py
tests/: test_basic.py  test_failover.py  test_router.py
utils/: logging.py  metrics.py
