[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multicloud-prefect-trainer"
version = "0.1.0"
description = "Prefect pipeline for cost-aware multi-cloud model training with failover across AWS, GCP, and Azure."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "prefect>=3.0,<4.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34"]
gcp = ["google-cloud-aiplatform>=1.71"]
azure = ["azure-ai-ml>=1.19", "azure-identity>=1.17"]
dev = ["pytest>=8.0"]

[project.scripts]
multicloud-trainer = "multicloud_ml_pipeline.cli:main"
multicloud-trainer-web = "multicloud_ml_pipeline.web:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
